__**HotFix 4.4.9**__
- changed default `DBBanner` blur amount to `0`
- fixed issue in `on_command_error`
- Updated `banner_creator.py`
    - fixed issue with `banner_creator.py` raising an issue about `_font_Whitelist_y` not existing. Thanks @IceOfWraith#6057
    - changed resolution of Banners in `banner_creator.py` from `1800x600` to `800x270`
        - changed `self._font_default_size` from 25 to 12
    - fixed issue with `word_wrap` not handling text without a blank space. Too long of Instance Names will show like this `InstaceN...` or similar depending on length.

__**Update 4.4.8**__
- added `Donator` role bypass for Auto whitelist wait time.
    - added `/whitelist donator_bypass` command.

__**Update 4.4.7**__
- fixed issue with `whitelist_request_handler()` when attempting to use a non unique IGN. Thanks @Snaggolicious#4987
- split `AMP.py` class's into seperate files for future ease of usage/editing.
    - Updated any related `AMP.py` calls and any type checking related to `AMPInstance, AMPHandler` and `AMPConsole`
- fixed logic on `/bot permissions` command
- updated info on `/bot utils clear` command
- cleaned up formatting of `bot_utils_sync` method
- updated the layout of `bot_settings_embed` inside `utils_embeds.py` which will provide a cleaner display for `/bot settings` command
- fixed issue with donator flag not updating on banners. Thanks @FeminalPanda#7879
    - updated `commands.md` to reflect the changes.
- began making `sub_group_handler` for adding commands to an existing command group.
- fixed issue with `server banners` not resetting when the discord channel was deleted. Thanks @hotdamnitsaaron#1501
- fixed issue with `whitelisting`, was failing with duplicate IGNs. Thanks @Snaggolicious#4987
- added `intents.jpg` to be used with `Readme.md`
- Servers that are `Hidden` via `/server settings hidden` will be omitted when a `NON STAFF` member uses an autocomplete that provides server names.
- added a `dev` print to `AMP` Login's if they fail.